src/test/deca/context/invalid/resultats/test6_op_bool4-cont.res
./src/test/deca/context/invalid/test6_op_bool4.deca:18:1: The types are incompatible for a Boolean Operation
